Fix gap between footer and main container

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Grand+Hotel&display=swap");
 html, body {
+  background-color: #000000;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 16px;
   margin: 0;
@@ -11,12 +12,14 @@ html, body {
 }
 
 .main, main {
+  background-color: #fefefe;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0 auto;
   padding: 1em;
   width: 100%;
   min-width: 320px;
+  max-width: 1432px;
 }
 
 main {
@@ -24,7 +27,7 @@ main {
 }
 
 header.main {
-  background: url(../img/triangles-color-mobile.png) 80% 100% fixed;
+  background: #ffffff url(../img/triangles-color-mobile.png) 80% 100% fixed;
   background-size: cover;
   background-color: #8cddcb;
   color: #ffffff;
@@ -341,7 +344,7 @@ footer.main {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Fira Code", "Fira Mono", sans-serif;
-  padding: 0 1.5em 0;
+  padding: 1em 1.5em .25em;
   text-align: center;
 }
 
@@ -352,5 +355,76 @@ footer.main .fa-heart {
 footer.main a.footer-link {
   color: #228be6;
   text-decoration: none;
+}
+
+@-webkit-keyframes rotate-shape {
+  100% {
+    -webkit-transform: rotatateX(360deg);
+            transform: rotatateX(360deg);
+  }
+}
+
+@keyframes rotate-shape {
+  100% {
+    -webkit-transform: rotatateX(360deg);
+            transform: rotatateX(360deg);
+  }
+}
+
+.scene {
+  width: 200px;
+  height: 200px;
+  -webkit-perspective: 800px;
+          perspective: 800px;
+}
+
+.cube {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-animation: rotate-shape 10s linear infinite;
+          animation: rotate-shape 10s linear infinite;
+}
+
+.side {
+  background-color: rgba(32, 178, 171, 0.575);
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  border: 5px solid #139797;
+  text-align: center;
+  padding: 3em;
+}
+
+.back {
+  -webkit-transform: translateZ(-100px);
+          transform: translateZ(-100px);
+}
+
+.left {
+  -webkit-transform: translateX(-100px) rotateY(90deg);
+          transform: translateX(-100px) rotateY(90deg);
+}
+
+.right {
+  -webkit-transform: translateX(100px) rotateY(90deg);
+          transform: translateX(100px) rotateY(90deg);
+}
+
+.top {
+  -webkit-transform: translateY(-100px) rotateX(90deg);
+          transform: translateY(-100px) rotateX(90deg);
+}
+
+.bottom {
+  -webkit-transform: translateY(100px) rotateX(90deg);
+          transform: translateY(100px) rotateX(90deg);
+}
+
+.front {
+  -webkit-transform: translateZ(100px);
+          transform: translateZ(100px);
 }
 /*# sourceMappingURL=main.css.map */
